# rfo-protocol

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  PROTOCOL.md  README.md  SDK_GUIDE.md  docker-compose.yml  openapi.yaml
.github/workflows/: ci.yml  release.yml
benches/: rfo_benchmarks.rs
examples/: test_client.rs
js/: index.js  package.json
js/examples/: quickstart.js
migrations/: 001_initial.sql  002_audit_logs.sql  004_admin_architecture.sql
python/: README.md  pyproject.toml
python/examples/: quickstart.py
python/examples/demo_site/: index.html
python/rfo/: __init__.py  ffi.py
src/: admin.rs  audit.rs  auth.rs  binary.rs  cli.rs  client.rs  compiler.rs  core_file.rs  domain.rs  ffi.rs  lib.rs  main.rs  opt_resolver.rs  parser.rs  pipeline.rs  protocol.rs  rfo_protocol.rs  telemetry.rs  transport.rs
src/cache/: mod.rs
src/crypto/: mod.rs  site_id.rs
src/server/: handlers.rs  middleware.rs  mod.rs  websocket.rs
tests/: concurrency.rs  integration.rs  protocol.rs  security.rs
