[package]
name = "rfo-core"
version = "0.1.0"
edition = "2021"
description = "RFO Protocol Engine — Next-gen application-layer network protocol for AI web-scale agents"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "timeout", "trace", "cors"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
scraper = "0.22"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
notify = "7"
walkdir = "2"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rfo_benchmarks"
harness = false
