[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rfo-core"
version = "0.1.0"
description = "RFO Protocol — Native AI protocol bindings for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["rfo", "ai", "protocol", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://opencode.ai"
Repository = "https://github.com/anomalyco/rfo"

[tool.setuptools.packages.find]
include = ["rfo*"]
